--- a/app/src/app/load_and_save_data/page.mdx
+++ b/app/src/app/load_and_save_data/page.mdx
@@ -63,9 +63,9 @@ df2.printSchema()
 
 ## Saving Files
 
-You can write your dataframe with the `write` attribute. When saving a file, you typically need to specify a few parameters:
-- specify the write `.mode()`
-- specify the save file format with `.format()`
+You can write your dataframe with the `write` attribute. When saving a file, you typically need to specify a few parameters:{{ className: "lead" }}
+- specify the write `.mode()`{{ className: "lead" }}
+- specify the save file format with `.format()`{{ className: "lead" }}
 - (optional) indicate if you want partitioned columns with `.partitionBy()`{{ className: "lead" }}
 
 ```python
