--- a/app/src/app/window_functions/page.mdx
+++ b/app/src/app/window_functions/page.mdx
@@ -7,11 +7,11 @@ export const metadata = {
 
 # Window Functions
 
-Window functions allow us to aggregate over different slices of our dataframe in a single step.
+Window functions allow us to aggregate over different slices of our dataframe in a single step.{{ className: "lead" }}
 
-Let's start with a question "What are the top 3 wines for each reviewer"?
+Let's start with a question "What are the top 3 wines for each reviewer"?{{ className: "lead" }}
 
-Let's load our dataframe
+Let's load our dataframe{{ className: "lead" }}
 
 ```python {{title: "Python"}}
 from pyspark.sql import SparkSession, functions as F
