--- a/app/src/app/quick_start/page.mdx
+++ b/app/src/app/quick_start/page.mdx
@@ -6,7 +6,7 @@ export const metadata = {
 
 # Setting up a Spark Environment
 
-Spark is designed to scale with the amount of compute you have available. It generally it requires a bit more setup to test locally,  usually people work with Spark in a cloud environment (e.g. Databricks, Dataproc, Colab, EMR, Synapse).{{ className: 'lead' }}
+Spark is designed to scale with the amount of compute you have available. It generally it requires a bit of work to set up locally, so most people tend to work with Spark in a cloud environment (e.g. Databricks, Dataproc, Colab, EMR, Synapse).{{ className: 'lead' }}
 
 
 If you have access to a Spark cloud environment, then feel free to follow along in a notebook there. If not, there are a few options to quickly get started. We'll focus on two different ways to get setup: {{ className: 'lead' }}
