--- a/app/src/app/hello_world/page.mdx
+++ b/app/src/app/hello_world/page.mdx
@@ -8,6 +8,8 @@ export const metadata = {
 
 One nice thing about Spark is that under the hood, it's basically just a SQL dialect. {{ className: 'lead' }}
 
+(Example notebook can be found [here](https://colab.research.google.com/drive/1IiKGO4POAoKuo7W-ePdEqA9QuGSClFqC?usp=sharing)){{ className: 'lead' }}
+
 <Note>
   The entry point to Spark is the `spark` session object. This is used to tell your Spark cluster what you want to do, whether it's reading data, writing data, or executing a query.
 </Note>
