--- a/app/src/app/modifying_dataframes/page.mdx
+++ b/app/src/app/modifying_dataframes/page.mdx
@@ -9,6 +9,8 @@ export const metadata = {
 
 Let's set up some test data and create some new calculated columns. {{className:"lead"}}
 
+(Example notebook can be found [here](https://colab.research.google.com/drive/1iGinVFSuRN-bugupf9HmXNen2xlILu-f?usp=sharing)){{ className: 'lead' }}
+
 <Note>
     **Note:** We're now including `from pyspark.sql import functions as F` with our imports.
     This is a common convention in PySpark and makes it easier to quickly access any functions in the module
