--- a/app/src/app/grouping_and_agg/page.mdx
+++ b/app/src/app/grouping_and_agg/page.mdx
@@ -9,6 +9,8 @@ export const metadata = {
 
 Let's do some aggregations. We'll start by loading some data. {{className:"lead"}}
 
+(Example notebook can be found [here](https://colab.research.google.com/drive/1PdIu0ug7X0CwWjJP13vRTmvTjq91JCwu?usp=sharing)){{ className: 'lead' }}
+
 ```python {{title:"Python"}}
 from pyspark.sql import SparkSession, functions as F
 
