--- a/app/src/app/joins/page.mdx
+++ b/app/src/app/joins/page.mdx
@@ -11,6 +11,8 @@ Joins are notoriously tricky in libraries like Pandas and NumPy. However, in Spa
 
 Let's load some data first. {{className:"lead"}}
 
+(Example notebook can be found [here](https://colab.research.google.com/drive/1Ybz8pjrxx0_lbqQqQ2WyNiP9efMc3UtQ?usp=sharing)){{ className: 'lead' }}
+
 ```python {{title:"Python"}}
 from pyspark.sql import SparkSession, functions as F
 
