--- a/app/src/app/window_functions/page.mdx
+++ b/app/src/app/window_functions/page.mdx
@@ -13,6 +13,8 @@ Let's start with a question "What are the top 3 wines for each reviewer"?{{ clas
 
 Let's load our dataframe{{ className: "lead" }}
 
+(Example notebook can be found [here](https://colab.research.google.com/drive/12yOPpkmDAaOF8UmT5xouhEZOOk15A0xF?usp=sharing)){{ className: 'lead' }}
+
 ```python {{title: "Python"}}
 from pyspark.sql import SparkSession, functions as F
 
