--- a/app/src/app/user_defined_functions/page.mdx
+++ b/app/src/app/user_defined_functions/page.mdx
@@ -14,6 +14,8 @@ There are two general flavors of UDFs: {{ className: 'lead' }}
 
 We'll go through a quick example of each. First let's load our data. {{ className: 'lead' }}
 
+(Example notebook can be found [here](https://colab.research.google.com/drive/1kyZ-ReILIF9y6-x6BlqxSxovf9wXPQym?usp=sharing)){{ className: 'lead' }}
+
 ```python {{ title: 'python' }}
 from pyspark.sql import SparkSession, functions as F
 
