--- a/app/src/app/going_back_to_python/page.mdx
+++ b/app/src/app/going_back_to_python/page.mdx
@@ -1,11 +1,12 @@
 export const metadata = {
-  title: 'Exporting data to native python',
+  title: 'Moving data back to python',
   description: 'It is simple to move data back and forth between Spark and Python.'
 }
 
 # Going Back to Python
 Spark offers a few different ways to move your data to and from native Python. One popular way is by converting your Spark dataframe into a Pandas dataframe. Alternatively, you can convert your Spark dataframe directly to a Python list of objects (specifically, a list of "Row" objects, with an attribute for each column in your table). {{ className: 'lead' }}
 
+(Example notebook can be found [here](https://colab.research.google.com/drive/1XOmVwNHHxLlLTKa7vLVKdh1JPVrnQ1P_?usp=sharing)){{ className: 'lead' }}
 
 ## Converting to Native Python
 
