--- a/app/src/app/page.mdx
+++ b/app/src/app/page.mdx
@@ -3,7 +3,7 @@ import { Resources } from '@/components/Resources'
 import { HeroPattern } from '@/components/HeroPattern'
 
 export const metadata = {
-  title: 'Spark Made Easy',
+  title: 'Spark Made Easy - The Fasted Way to Learn Spark',
   description:
     'The fastest way to learn Spark.',
 }
