--- a/app/src/app/quick_start/page.mdx
+++ b/app/src/app/quick_start/page.mdx
@@ -1,5 +1,5 @@
 export const metadata = {
-  title: 'Quickstart',
+  title: 'Setting up a Spark Environment',
   description:
     'Set up a Spark-enabled environment in minutes.',
 }
